Just found that using `overflow: hidden` prevents the blur effect from going outside the border.

--- a/index.css
+++ b/index.css
@@ -150,6 +150,10 @@ h3 {
     width: 300px;
 }
 
+.projectImageContainer {
+    overflow: hidden;
+    border-radius: 20px;
+}
 
 #projectsGroup img:hover{ 
     animation: blurOut 1s forwards;;
